--- a/src/app/mapas/pages/full-screen/full-screen.component.html
+++ b/src/app/mapas/pages/full-screen/full-screen.component.html
@@ -1,1 +1,16 @@
+
+<ul class="list-group">
+    
+    <li class="btn btn-primary"
+        (click)="irMarcador()">
+        Mi ubicación
+    </li>
+
+    </ul>
+        
+    
+    <app-search-bar></app-search-bar>
+    
+    
+
 <div id="mapa"></div>
